--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                                         application that allows visitors to add their visits and get approved by guest and displaying their logs</p>
                                 </div>
                                 <br>
-                                <p> <b>Github Link:</b><a href="https://github.com/SahilPawar10/Chat_Application">  VMS</span></a></p>
+                                <p> <b>Github Link:</b><a href="https://github.com/SahilPawar10/VMS/">  VMS</span></a></p>
                             </div>
                         </div>
 
